<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_example.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="org.fnives.test.showcase.examplecase.navcontroller.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="HomeFragment" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="org.fnives.test.showcase.examplecase.navcontroller.DetailFragment"
        tools:layout="@layout/fragment_detail"
        android:label="DetailFragment" >
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
</navigation>